Adding scrapper library

--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,12 @@
 LOG_LEVEL=DEBUG
 
-CRAWLER_PROVIDER=crawl4ai
-CRAWLER_API_HOST=http://127.0.0.1:11235
-CRAWLER_API_KEY=
+SCRAPER_PROVIDER=crawl4ai
+SCRAPER_API_HOST=http://127.0.0.1:11235
+SCRAPER_API_KEY=
+SCRAPER_POLLING_INTERVAL=2.0
+SCRAPER_REQUEST_TIMEOUT=60.0
+SCRAPER_DEFAULT_JOB_TIMEOUT=300.0
+SCRAPER_MAX_CONCURRENT_JOBS_OVERRIDE=10
 
 POSTGRES_HOST=127.0.0.1
 POSTGRES_PORT=5432
