--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,9 @@ name = "docu-ai"
 version = "0.1.0"
 requires-python = ">=3.12"
 dependencies = [
+    "aiohttp>=3.11.16",
     "beautifulsoup4>=4.13.3",
+    "html2text>=2024.2.26",
     "httpx>=0.28.1",
     "mcp[cli]>=1.6.0",
     "openai>=1.71.0",
@@ -14,6 +16,9 @@ dependencies = [
     "python-dotenv>=1.1.0",
     "requests>=2.32.3",
 ]
+
+[dependency-groups]
+dev = ["pytest>=8.3.5", "pytest-asyncio>=0.26.0", "pytest-mock>=3.14.0"]
 
 [tool.pytest.ini_options]
 pythonpath = "src"
