--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,11 @@ dependencies = [
 ]
 
 [dependency-groups]
-dev = ["pytest>=8.3.5", "pytest-asyncio>=0.26.0", "pytest-mock>=3.14.0"]
+dev = [
+    "pytest>=8.3.5",
+    "pytest-asyncio>=0.26.0",
+    "pytest-mock>=3.14.0",
+]
 
 [tool.pytest.ini_options]
 pythonpath = "src"
