Adding database module with migrations

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,5 @@
 LOG_LEVEL=DEBUG
+EMBEDDING_DIMENSION=1536
 
 SCRAPER_PROVIDER=crawl4ai
 SCRAPER_API_HOST=http://127.0.0.1:11235
@@ -13,3 +14,6 @@ POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=docu_ai
+POSTGRES_POOL_SIZE=5
+POSTGRES_MAX_OVERFLOW=10
+POSTGRES_ECHO=false
