--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,9 @@ dependencies = [
     "greenlet>=3.1.1",
     "html2text>=2024.2.26",
     "httpx>=0.28.1",
+    "litellm>=1.65.7",
     "mcp[cli]>=1.6.0",
+    "ollama>=0.4.7",
     "openai>=1.71.0",
     "pgvector>=0.4.0",
     "psycopg2-binary>=2.9.10",
@@ -19,7 +21,10 @@ dependencies = [
     "pydantic-settings>=2.8.1",
     "python-dotenv>=1.1.0",
     "requests>=2.32.3",
+    "sentence-transformers>=4.0.2",
     "sqlalchemy[asyncio]>=2.0.40",
+    "tiktoken>=0.9.0",
+    "torch>=2.6.0",
 ]
 
 [dependency-groups]
