--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,11 +29,7 @@ dependencies = [
 ]
 
 [dependency-groups]
-dev = [
-    "pytest>=8.3.5",
-    "pytest-asyncio>=0.26.0",
-    "pytest-mock>=3.14.0",
-]
+dev = ["pytest>=8.3.5", "pytest-asyncio>=0.26.0", "pytest-mock>=3.14.0"]
 
 [tool.pytest.ini_options]
 pythonpath = "src"
